--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <body lang="pt-br"
     style="width: 100vw; height: 100vh; margin: 0; padding: 0; box-sizing: border-box; overflow: hidden;; --primary-color: hsl(180, 0%, 39%);--primary-color-inverted: hsl(0, 110%, 61%);--primary-color-active: hsl(180, 0%, 27%);--primary-color-light: hsl(180, 0%, 95%);--bs-btn-active-bg: hsl(180, 0%, 27%);--bs-btn-active-border-color: hsl(180, 0%, 27%);--fontColor: white;--fontFamilyTitle: 'Overpass Bold', sans-serif;--fontFamilySubtitle: 'Roboto Condensed', sans-serif;--fontFamilyLongtext: 'Roboto Condensed', sans-serif;--fontFamilyTitleBold: 'Overpass Bold', sans-serif;--fontFamilySubtitleBold: 'Roboto Condensed Bold', sans-serif;--fontFamilyLongtextBold: 'Roboto Condensed Bold', sans-serif;--font-color-contrast: white;">
     <meta name="Taxonomia" content="His-Infográfico3">
-    <link rel="stylesheet" href="resources/styles/pinNP369/_id_.1ec82d33.css">
-    <link rel="stylesheet" href="resources/styles/pinNP369/_id_.fd53df6c.css">
-    <link rel="stylesheet" href="resources/styles/pinNP369/_id_.77d26e7b.css">
-    <link rel="stylesheet" href="resources/styles/pinNP369/_id_.ed78c0f6.css">
-    <link rel="stylesheet" href="resources/styles/pinNP369/_id_.17c07bea.css">
+    <link rel="stylesheet" href="resources/styles/pinNP369/_id_1ec82d33.css">
+    <link rel="stylesheet" href="resources/styles/pinNP369/_id_fd53df6c.css">
+    <link rel="stylesheet" href="resources/styles/pinNP369/_id_77d26e7b.css">
+    <link rel="stylesheet" href="resources/styles/pinNP369/_id_ed78c0f6.css">
+    <link rel="stylesheet" href="resources/styles/pinNP369/_id_17c07bea.css">
     <link rel="stylesheet" href="resources/styles/pinNP369/ckeditor.css">
     <link rel="stylesheet" href="resources/styles/pinNP369/fonts.css">
     <div id="oed-nextpage-body"
